@@ -62,6 +62,11 @@ Build
   variable anymore.  It also forwards the LDFLAGS settings to the linker
   when building a shared library.
 
+Tests
+-----
+
+- Issue #7667: Fix doctest failures with non-ASCII paths.
+
 
 What's New in Python 2.6.5?
 ===========================
